--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -28,7 +28,7 @@ ion-content {
 }
 
 .title_category {
-  margin-block: 0;
+  margin-block: 0 12px;
   font-size: 24px;
   line-height: 29px;
   color: var(--dark-text);
