--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -9,7 +9,7 @@
   </div>
   <swiper #mySlide dir="rtl" [pagination]="{
     type: 'fraction'
-  }" [navigation]="false" class="mySwiper">
+  }" [navigation]="false" class="mySwiper detaileSlide">
     <ng-template swiperSlide>
       <img src="../../../assets/images/img_card.png" alt="">
     </ng-template>
