--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -14,8 +14,7 @@
         <ion-button expand="block" fill="solid" (click)="navigate('register')">
           حساب جديد
         </ion-button>
-
-        <p class="guest" (click)="navigate('home')">
+        <p class="guest" (click)="loginAsVisitor()">
           الدخول كزائر
         </p>
       </div>
