--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,11 +8,11 @@
   --light-text: #87899E;
   /** primary **/
   --ion-color-primary: #2A6FDB;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary-rgb: 42, 111, 219;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #2562c1;
+  --ion-color-primary-tint: #3f7ddf;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
