--- a/src/app/pages/add/add.page.scss
+++ b/src/app/pages/add/add.page.scss
@@ -1,9 +1,9 @@
-.swiper {
+.swiper.addSlide {
   width: 100%;
   height: 300px;
-}
 
-.swiper-slide {
+
+  .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -30,6 +30,7 @@
   // width: 100%;
   // height: 100%;
   object-fit: cover;
+}
 }
 
 .header-image {
