--- a/src/app/pages/details/details.page.scss
+++ b/src/app/pages/details/details.page.scss
@@ -1,10 +1,9 @@
 // @import "swiper/css";
-.swiper {
+.swiper.detaileSlide {
   width: 100%;
   height: 300px;
-}
 
-.swiper-slide {
+  .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -50,6 +49,8 @@
   direction: ltr;
   width: fit-content;
 }
+}
+
 
 .header-image {
   position: absolute;
