--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,9 +1,43 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+  <div class="container">
 
-<ion-content>
+    <div class="content animate__animated animate__fadeInBottomLeft duration">
+      <ion-button class="backBtn" fill="clear" (click)="back()">
+        <img src="../../../assets/images/back.svg" alt="">
+      </ion-button>
+      <img class="logo" src="../../../assets/images/logo_blue.svg" alt="">
+      <h2>تطبيق عقارك</h2>
+      <h5>أهلا بك</h5>
+    </div>
 
+    <form [formGroup]="form">
+
+      <div class="userTypes">
+        <div *ngFor="let type of userTypes" class="selectionBox animate__animated animate__fadeInBottomLeft duration"
+          [ngClass]="{'active': form.value.userType == type?._id }" (click)="form.patchValue({ userType: type?._id })">
+          {{type.name}}
+        </div>
+      </div>
+
+      <ion-item class="animate__animated animate__fadeInBottomLeft duration">
+        <ion-label>
+          <img src="../../../assets/images/user.svg" alt="">
+        </ion-label>
+        <ion-input formControlName="username" type="text" placeholder="اسم المستخدم"></ion-input>
+      </ion-item>
+
+      <ion-item class="animate__animated animate__fadeInBottomLeft duration">
+        <ion-label>
+          <img src="../../../assets/images/pass.svg" alt="">
+        </ion-label>
+        <ion-input formControlName="password" type="text" placeholder="كلمة المرور"></ion-input>
+      </ion-item>
+
+    </form>
+    <ion-button mode="ios" class="submit animate__animated animate__fadeInBottomLeft duration" expand="block"
+      fill="solid" [disabled]="!form.valid" (click)="submit()">
+      انشاء حساب
+    </ion-button>
+
+  </div>
 </ion-content>
